# master-big-data-2025-2026

a10-feb-23/: .gitignore  docker-compose.yml  ejercicio_metricas.py  main.py  pyproject.toml  requirements.txt
a10-feb-23/app/: config.py  db.py  image_processor.py  main.py  minio_client.py
a10-feb-23/src/: minio.py
a11-mar-2/: .env.example  docker-compose.yml  main.py  pyproject.toml
a11-mar-2/app/: api.py  config.py  mongo.py  sensor_data.py
a12-mar-9/: README.md  docker-compose.yml
